web-infras/parser/tests/fixtures/babel/es2020/import-meta/no-other-prop-names/output.txt
[SyntaxError]: The only valid meta property for import is import.meta. (1,8)
1|import.notMeta;
 |      ^
